syntax = "proto3";

option java_package = "com.slyene.appslist.data.checksums";
option java_multiple_files = true;

message ChecksumInfo {
  string checksum = 1;
  string version_name = 2;
}

message ChecksumCache {
  map<string, ChecksumInfo> checksums = 1;
}
